--- a/CSS Odev-1/Pera Web Design.html
+++ b/CSS Odev-1/Pera Web Design.html
@@ -3,11 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pera Web Design</title>
-    <style>
-        h1 {color: red; font-size: 30px; font-family: 'Times New Roman', Times, serif; font-style: italic;}
-        p {font-size: 16px; font-family: 'Times New Roman', Times, serif; font-style: normal;}
-    </style>
+    <title>Tekrar</title>
 </head>
 <body>
 <!--Navbar Start-->
@@ -15,7 +11,7 @@
     <nav>
         <ul>
             <li>
-                <a href="Pera Web Design.html">Ana Sayfa</a>
+                <a href="index.html">Ana Sayfa</a>
             </li>
             <li>
                 <a href="about.html">Hakkimizda</a>
@@ -32,33 +28,42 @@
 <section>
     <!--Articles Start-->
     <article>
-        <h1>Web Design</h1>
-        <img height="200" src="images/image1.jpg" alt="Web Design">
-        <p>Web sitenizi ucretsiz olarak kuruyoruz. <br>
-        Olmuslerimizin ruhuna bir Fatiha okursaniz memnun oluruz, okumazsaniz da caniniz sagolsun.<br>
-        Herkesin dijital donusumu basari ile yapmasini umut ediyoruz<br>
-        Sitenizin kurulumu icin ihtiyacimiz olan bilgiler:</p>
+        <h2>Birinci Yazi</h2>
+        <img src="https://picsum.photos/id/237/600/300" alt="Yazi1">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, dignissimos!</p>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <p>Modi totam voluptas distinctio officia!</p>
+        <p>Hic facilis inventore ut voluptatum.</p>
         <ol>
-            <li>Tema,</li>
-            <li>Logonuz,</li>
-            <li>Sektorunuz,</li>
-            <li>Isleriniz ile ilgili resimler.</li>
+            <li>Lorem, ipsum.</li>
+            <li>Ipsum, numquam.</li>
+            <li>Libero, quas.</li>
+            <li>Dignissimos, cupiditate.</li>
         </ol>
     </article>
     <hr>
     <article>
-        <h1>Teknik Destek</h1>
-        <p>7/24 teknik destek hizmeti elbette sunmuyoruz ama mail atarsaniz musait oldugumuz ilk firsatta donus yapariz.</p>
-        <p>Hayatin tadini cikarin.</p>
+        <h2>Ikinci Yazi</h2>
+        <img src="https://picsum.photos/id/247/600/300" alt="Yazi1">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, dignissimos!</p>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <p>Modi totam voluptas distinctio officia!</p>
+        <p>Hic facilis inventore ut voluptatum.</p>
+        <ul>
+            <li>Lorem, ipsum.</li>
+            <li>Dolorum, perspiciatis.</li>
+            <li>Ratione, harum.</li>
+            <li>Animi, recusandae.</li>
+        </ul>
     </article>
     <hr>
     <article>
-        <h1>Egitimler</h1>
-        <img src="https://picsum.photos/id/257/600/300" alt="Egitimler">
-        <p>Egitimlerimizi online veriyoruz.</p>
-        <p>Tamamen ucretsiz.</p>
-        <p>Tek sartimiz ayaklarinizi suya sokmaniz, evde kova da olur.</p>
-        <p>Sizi seviyoruz.</p>
+        <h2>Ucuncu Yazi</h2>
+        <img src="https://picsum.photos/id/257/600/300" alt="Yazi1">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, dignissimos!</p>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <p>Modi totam voluptas distinctio officia!</p>
+        <p>Hic facilis inventore ut voluptatum.</p>
     </article>
     <hr>
     <!--Articles End-->
@@ -70,13 +75,13 @@
     <nav>
         <ul>
             <li>
-                <a href="Pera Web Design.html">Ana Sayfa</a>
+                <a href="index.html">Ana Sayfa</a>
             </li>
             <li>
                 <a href="about.html">Hakkimizda</a>
             </li>
             <li>
-                <a href="contact.html">Iletisim</a>
+                <a href="contact.html">Ana Sayfa</a>
             </li>
         </ul>
     </nav>
